--- a/styless.css
+++ b/styless.css
@@ -1346,7 +1346,7 @@ margin-left: 50px;
             
             
 }
-@media(max-width:380px){
+@media(min-width:380px){
 
     header .fa-bars{
         display: block;
