--- a/style.css
+++ b/style.css
@@ -443,3 +443,162 @@ color: #fff;
       width: 200px; /* Adjust width */
   }
 }
+
+@media screen and (min-width: 390px) {
+  .container {
+      flex-direction: column;
+      height: auto;
+  }
+
+  .partition1 {
+      width: 100%;
+      position: relative;
+      height: auto;
+  }
+
+  .partition2 {
+      margin-left: 0;
+      width: 100%;
+  }
+
+  .cake1 {
+      width: 100%;
+      height: auto;
+  }
+
+  .divCat1 {
+      width: 100%;
+      height: auto;
+      margin: 10px 0;
+  }
+
+  .divCat1 img {
+      width: 100%;
+      height: auto;
+  }
+
+  .secondary-navbar {
+    padding: 1rem; 
+    height: auto; 
+    justify-content: flex-start; /* Align items to the start */
+    margin-top: 60px;
+}
+.secondary-navbar img{
+    height: 40px;
+    width: 40px;
+}
+.secondary-navbar input[type="text"] {
+    width: 40%; /* Adjust width */
+    margin-left: 1rem; /* Adjust margin */
+}
+
+.secondary-navbar button {
+    margin-left: 0.5rem; /* Adjust margin */
+}
+
+.secondary-navbar .social-icons {
+    margin-left: 5px;
+    font-size: 18px; }
+    
+}
+
+.cake1 {
+    width: 100%;
+    height: auto;
+}
+
+.cake1 .divCat1 {
+    width: 100%;
+    height: auto;
+    margin: 10px 0;
+}
+
+.divCat1 img {
+    width: 90%;
+    height: auto;
+}
+
+
+@media screen and (max-width: 380px) {
+  .container {
+      flex-direction: column;
+      height: auto;
+  }
+
+  .partition1 {
+      width: 100%;
+      position: relative;
+      height: auto;
+      margin-top: 10px;
+  }
+  .partition1 h1{
+    text-align: center;
+
+  }
+  .partition1 h3{
+    text-align: center;
+    font-size: 20px;
+
+  }
+  .a{
+    font-size: 17px;
+    text-align: center;
+   }
+input[type="checkbox"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 15px;
+    height: 15px;
+    border: 2px solid #555;
+    border-radius: 3px;
+    outline: none;
+    cursor: pointer;
+    vertical-align: middle;
+    align-items: center;
+    justify-content: center;
+}
+  .partition2 {
+      margin-left: 0;
+      width: 100%;
+  }
+
+  .cake1 {
+      width: 100%;
+      height: auto;
+  }
+
+  .cake1 .divCat1 {
+      width: 100%;
+      height: auto;
+      margin: 10px 0;
+  }
+
+  .divCat1 img {
+      width: 90%;
+      height: auto;
+  }
+
+  .secondary-navbar {
+    padding: 1rem; 
+    height: auto; 
+    justify-content: flex-start; /* Align items to the start */
+    margin-top: 60px;
+}
+.secondary-navbar img{
+    height: 40px;
+    width: 40px;
+}
+.secondary-navbar input[type="text"] {
+    width: 40%; /* Adjust width */
+    margin-left: 1rem; /* Adjust margin */
+}
+
+.secondary-navbar button {
+    margin-left: 0.5rem; /* Adjust margin */
+}
+
+.secondary-navbar .social-icons {
+    margin-left: 5px;
+    font-size: 18px; }
+  }
